<resources>
    <string name="app_name">AK chats</string>
    <string name="enter_you_name">Enter you name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="or">or</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="type_a_message">Type a message</string>
    <string name="contacts">Contacts</string>
    <string name="delete_specific_chats">Delete Specific Chats</string>
    <string name="delete_all_chats">Delete All Chats</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="kindly_contact_admin">Kindly Contact Admin</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reallySignOut">Do you want to Logout now?</string>
    <string name="delete_your_account">Do you want to delete your account?</string>
    <string name="delete_your_chats">Do you want to delete your all chats?</string>
    <string name="kindly_enter_your_password">Kindly enter your Password to continue</string>
    <string name="camera">Camera</string>
</resources>