<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/headerTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="Logout"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/subTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerTxt"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:text="@string/reallySignOut"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/deleteAccountTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerTxt"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/kindly_enter_your_password"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:visibility="gone"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edt_bg"
            android:textColorHint="@color/colorSecondaryText"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorPrimaryText"/>

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:padding="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:background="@drawable/edt_bg"
            android:hint="@string/enter_your_password"
            android:textColorHint="@color/colorSecondaryText"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorPrimaryText"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/yes"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/light_blue"/>


        <TextView
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/no"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorPrimaryText"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    </LinearLayout>


</androidx.cardview.widget.CardView>
