<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.SettingsActivity">

    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back"/>

        <ImageView
            android:id="@+id/save"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_save"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryText"
                android:background="@color/colorPrimary2"
                app:layout_constraintTop_toBottomOf="@+id/profileImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <TextView
                android:id="@+id/userMail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryText"
                android:background="@color/colorPrimary2"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/switchTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="Theme"
                android:textColor="@color/light_blue"
                android:background="@color/colorPrimary2"
                app:layout_constraintTop_toBottomOf="@+id/userMail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/forgot_password"
                android:textColor="@color/light_blue"
                android:background="@color/colorPrimary2"
                app:layout_constraintTop_toBottomOf="@+id/switchTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/deleteChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/delete_specific_chats"
                android:textColor="@color/light_blue"
                android:background="@color/colorPrimary2"
                app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/deleteAllChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/delete_all_chats"
                android:textColor="@color/light_blue"
                android:background="@color/colorPrimary2"
                app:layout_constraintTop_toBottomOf="@+id/deleteChat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/deleteAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/delete_account"
                android:textColor="@color/light_blue"
                android:background="@color/colorPrimary2"
                app:layout_constraintTop_toBottomOf="@+id/deleteAllChat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/logout"
                android:textColor="@color/light_blue"
                android:background="@color/colorPrimary2"
                app:layout_constraintTop_toBottomOf="@+id/deleteAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progressLay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/transparent_white"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressBar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:lottie_rawRes="@raw/progress_loader"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>